Added DTO Pattern using MapStruct. Added external maven.properties file.